# db_upload

./: .gitignore  client.py  dockerfile  main.py  pyproject.toml  server.py
data_get/: main.db
db_transfer/: constants.py  file_transfer.py  mood_transferer.py  server.py  transferer.py
